replace mysql connections with dynamodb
